XWIKI-18921: Panel Navigation: duplicated IDs * Declared the missing tree counter variable * Renamed the tree id and anchor id helpers and turned them into function declarations * Forwarded the extra arguments and the return value of the wrapped children callback * Replaced the duplicated id constant of TreeElement with the one from BaseElement * Added getNodeLabelIds to TreeElement * Added a NavigationPanel constructor taking the panel column * Renamed the test to noDuplicateAnchorIds * Made the test use the test reference, the NavigationPanel page object and waitForDocumentSelected